# rust-backend

./: .env  Cargo.toml
src/: db.rs  main.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth_guard.rs
src/models/: user.rs
src/routes/: api.rs
