[package]
name = "rust_crud_mysql"
version = "0.1.0"
edition = "2021"  # <- pakai "2021" karena "2024" belum stabil

[dependencies]
mysql = "24.0"
dotenvy = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"
argon2 = "0.3"
password-hash = "0.3"



