[package]
name = "rust_crud_mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "24.0"
dotenvy = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"        
rand_core = "0.6" 
jsonwebtoken = "9.2.0" 
chrono = "0.4"         